src/objects/License__c.object
<CustomObject>
    <description>Stores information pertinent to one license</description>
    <fields>
        <fullName>APPs__c</fullName>
        <label>APPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Call_Home__c</fullName>
        <label>Last Call Home</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMs__c</fullName>
        <label>PMs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMs__c</fullName>
        <label>VMs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>License</label>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>